<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/touch_selector">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingStart="@dimen/abc_list_item_padding_horizontal_material">

        <ImageView
            android:id="@+id/image_view_icon_list"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
            android:background="@drawable/circle"
            android:contentDescription="@string/image_icon"
            android:scaleType="center"
            tools:src="@drawable/ic_media_play_light" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_title_list"
                style="@style/ListItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                tools:text="LEVEL 1" />

            <TextView
                android:id="@+id/text_view_short_desc_list"
                style="@style/ListItemSecondLineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                tools:text="Introduction" />

        </LinearLayout>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/image_state"
            android:scaleType="centerCrop"
            android:visibility="gone"
            tools:src="@drawable/ic_media_pause_light" />

        <Button
            android:id="@+id/button_state_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/teal_100"
            android:elevation="4dp"
            android:text="@string/pack_list_button"
            android:textColor="@color/black"
            tools:targetApi="21" />

    </LinearLayout>
</FrameLayout>