<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/series_row_height"
    android:layout_margin="2dp"
    android:background="@android:color/white"
    android:descendantFocusability="blocksDescendants"
    android:foreground="?selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_small"
    android:paddingStart="@dimen/margin_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_view_active_series_lesson_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Hello" />

        <TextView
            android:id="@+id/text_view_bought_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp"
            android:text="@string/bought_by"
            android:textColor="@color/light_black"
            android:textSize="@dimen/series_created_by_text_size"
            android:visibility="visible"
            tools:text="Hello" />

        <ImageView
            android:id="@+id/view_lock_apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lock_lesson_view"
            android:src="@drawable/ic_lock_black_24dp"
            android:visibility="visible" />
        <ImageButton
            android:id="@+id/button_download_apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@android:color/transparent"
            android:contentDescription="@string/download_lesson_option"
            android:src="@drawable/ic_file_download_black_24dp"
            android:visibility="visible" />
        <ImageButton
            android:id="@+id/button_play_apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play_apple_option"
            android:src="@drawable/ic_play_circle_filled_black_24dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/custom_progressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:max="100"
            android:progress="10"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>
